[package]
name = "AdventOfCode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
itertools = "0.10.5"
json = "0.12.4"
rayon = "1.6.1"
regex = "1.7.0"
text_io = "0.1.12"
tuple-map = "0.4.0"

[[bin]]
name = "day01"
path = "day01.rs"

[[bin]]
name = "day02"
path = "day02.rs"

[[bin]]
name = "day03"
path = "day03.rs"

[[bin]]
name = "day04"
path = "day04.rs"

[[bin]]
name = "day05"
path = "day05.rs"

[[bin]]
name = "day06"
path = "day06.rs"

[[bin]]
name = "day07"
path = "day07.rs"

[[bin]]
name = "day08"
path = "day08.rs"

[[bin]]
name = "day09"
path = "day09.rs"

[[bin]]
name = "day10"
path = "day10.rs"

[[bin]]
name = "day11"
path = "day11.rs"

[[bin]]
name = "day12"
path = "day12.rs"

[[bin]]
name = "day13"
path = "day13.rs"

[[bin]]
name = "day14"
path = "day14.rs"

[[bin]]
name = "day15"
path = "day15.rs"

[[bin]]
name = "day16"
path = "day16.rs"

[[bin]]
name = "day17"
path = "day17.rs"

[[bin]]
name = "day18"
path = "day18.rs"

[[bin]]
name = "day19"
path = "day19.rs"
